--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 }
 body {
   font-family: "Open Sans", serif;
+  margin: 0;
 }
 h1, h2, h3, p, ul {
   margin: 0;
@@ -38,4 +39,39 @@ button {
 }
 button:focus {
   outline: 1px solid var(--color-accent);
+}
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.header__logo__img {
+  width: 36px;
+  height: 36px;
+}
+.header__logo__title {
+  font-size: 1.8rem;
+}
+.header__menu {
+  display: flex;
+  gap: 4px;
+}
+.header__menu__item {
+  padding: 8px 16px;
+}
+.header__menu__item:hover {
+  border-bottom: 1px solid var(--color-accent);
+}
+.header__menu__item.active {
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
 }
