--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ ul {
 }
 a {
   text-decoration: none;
-  color: var(--color-primary);
+  color: var(--color-text);
 }
 button {
   background-color: transparent;
@@ -74,4 +74,43 @@ button:focus {
 .header__menu__item.active {
   border: 1px solid var(--color-accent);
   border-radius: 4px;
+}
+/* Home */
+#home {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: 5rem 1rem;
+  padding-top: 7rem;
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 100%;
+  border: 3px solid var(--color-accent);
+}
+.home__title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.home__title--strong {
+  color: var(--color-accent);
+}
+.home__description {
+  font-size: 1.3rem;
+}
+.home__contact {
+  display: inline-block;
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+  margin: 2rem;
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  border-radius: 4px;
+}
+.home__contact:hover {
+  background-color: transparent;
+  color: var(--color-text);
+  outline: 2px solid var(--color-accent);
 }
