--- a/css/style.css
+++ b/css/style.css
@@ -305,3 +305,32 @@ button:focus {
   height: 2px;
   background-color: var(--color-accent);
 }
+/* Testimonial */
+.testimonial {
+  margin: 3rem;
+}
+.testimonial {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.testimonial:nth-child(even) .testimonial__img {
+  order: 1;
+}
+.testimonial__img {
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.24);
+}
+.testimonial__bubble {
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.24);
+}
+.testimonial__bubble__name {
+  color: var(--color-accent);
+  font-weight: bold;
+  filter: brightness(70%);
+}
