--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ button:focus {
 
 /* Header */
 .header {
-  background-color: #050a13;
+  /* background-color: #050a13; */
   position: fixed;
   top: 0;
   width: 100%;
@@ -73,6 +73,11 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   z-index: 1;
+  transition: all 300ms ease;
+}
+.header--dark {
+  background-color: var(--color-primary);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .header__logo {
   display: flex;
@@ -102,7 +107,8 @@ button:focus {
 }
 /* Home */
 #home {
-  background-color: var(--color-primary);
+  /* background-color: var(--color-primary); */
+  background-color: purple;
   color: var(--color-text);
   padding: 5rem 1rem;
   padding-top: 7rem;
