--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ button {
   border: 0;
 }
 button:focus {
-  outline: 1px solid var(--color-accent);
+  outline: 1px solid transparent;
 }
 
 /* Common */
@@ -64,7 +64,6 @@ button:focus {
 
 /* Header */
 .header {
-  /* background-color: #050a13; */
   position: fixed;
   top: 0;
   width: 100%;
@@ -91,12 +90,22 @@ button:focus {
 .header__logo__title {
   font-size: 1.8rem;
 }
+.header__toggle {
+  display: none;
+  color: var(--color-text);
+  font-size: 1.5rem;
+  position: absolute;
+  top: 1.3rem;
+  right: 1rem;
+}
 .header__menu {
   display: flex;
   gap: 4px;
 }
 .header__menu__item {
+  display: block;
   padding: 8px 16px;
+  border-bottom: 1px solid transparent;
 }
 .header__menu__item:hover {
   border-bottom: 1px solid var(--color-accent);
@@ -380,7 +389,7 @@ button:focus {
 
 @media screen and (max-width: 768px) {
   .section {
-    padding: 3rem 2rem;
+    padding: 4rem 2rem;
   }
   .title {
     font-size: 2rem;
@@ -391,12 +400,20 @@ button:focus {
   .header {
     flex-direction: column;
     align-items: start;
+    background-color: var(--color-primary);
+  }
+  .header__toggle {
+    display: block;
   }
   .header__menu {
+    display: none;
     flex-direction: column;
     text-align: center;
-    padding: 1rem 4rem;
+    margin: 1rem 4rem;
     gap: 1rem;
+  }
+  .header__menu.open {
+    display: flex;
   }
   .header__nav {
     width: 100%;
