--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 * {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Open Sans", serif;
   margin: 0;
